# dravr-tronc

./: .gitmodules  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs
src/mcp/: auth.rs  host.rs  mod.rs  modern.rs  protocol.rs  schema.rs  server.rs  tool.rs
src/mcp/transport/: http.rs  mod.rs  stdio.rs
src/notifications/: config.rs  email.rs  error_layer.rs  mod.rs  posthog.rs  slack.rs
src/notify/: layer.rs  mod.rs  provider.rs  rule.rs  state.rs  visit.rs
src/server/: auth.rs  cli.rs  health.rs  mod.rs  tracing_init.rs
tests/: integration_test.rs
